cargo-desugar/tests/ui/self-arg.out
error[E0614]: type `T` cannot be dereferenced
  --> tests/ui/self-arg.desugared.rs:23:49
   |
23 |             0: <T as std::clone::Clone>::clone(&*self.0),
   |                                                 ^^^^^^^ can't be dereferenced

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0614`.
